# Graduation-Design-Exhibition-Website

./: .gitignore  CLAUDE.md  COS_MIGRATION.md  DEPLOYMENT.md  PRD.md  PROJECT_STATUS.md  README.md  SERVER_OPS.md  docker-compose.yml  start.bat  start.sh  works_extracted.json  毕业设计作品汇总.md
.claude/: settings.json
backend/: .env.example  Cargo.toml  setup_database.sh
backend/backend/: import_works.sql  import_works_complete.sql
backend/migrations/: 0001_create_works.sql  0002_create_likes.sql  0003_create_comments.sql  0004_create_abuse_logs.sql  0005_fix_comment_pagination.sql  0006_add_foreign_keys.sql  0007_migrate_to_cos.sql  0008_fix_collation.sql
backend/scripts/: migrate_works.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  response.rs
backend/src/models/: comment.rs  like.rs  mod.rs  ranking.rs  work.rs
backend/src/routes/: comments.rs  health.rs  interactions.rs  likes.rs  mod.rs  rankings.rs  works.rs
backend/src/services/: fingerprint.rs  mod.rs  rate_limit.rs  sanitize.rs
backend/src/utils/: ip.rs  mod.rs  random_name.rs
frontend/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/components/: CommentPanel.vue  ExhibitionFooter.vue  ExhibitionHeader.vue  HeroIcon3D.vue  HomeAbout.vue  HomeHero.vue  HomeMajors.vue  HomeRanking.vue  LikeButton.vue  ParticleBackground.vue  SharePanel.vue  TechCube.vue  WorkCard.vue
frontend/composables/: useMagneticButton.ts  useOrbitCamera.ts  useParticles.ts  useRafManager.ts  useWaveBackground.ts  useWorks.ts
nginx/: graduation.conf  nginx-local.conf
(+17 files in other folders)
